test/corpus/09_unions.txt
========================
Union
========================

record Union {
  union { null, string } optionalString;
}

---

(program
  (record_declaration (identifier)
    (statement_block
      (field_declaration
        (union
          (union_block
            (primitive_type)
            (primitive_type)
          )
        )
        (identifier)
      )
    )
  )
)

========================
Union in Record
========================

record RecordWithUnion {
  union { null, string } optionalString;
  union { decimal(12, 6), float } number;
}

---

(program
  (record_declaration
    (identifier)
    (statement_block
      (field_declaration
        (union
          (union_block
            (primitive_type)
            (primitive_type)
          )
        )
        (identifier)
      )
      (field_declaration
        (union
          (union_block
            (logical_type
              (known_logical_type
                (decimal
                  (argument_list
                    (literal_type
                      (number)
                    )
                    (literal_type
                      (number)
                    )
                  )
                )
              )
            )
            (primitive_type)
          )
        )
        (identifier)
      )
    )
  )
)

========================
Map of Union
========================

record RecordWithUnion {
  map<union { null, string }> optionalStrings;
}

---

(program
  (record_declaration
    (identifier)
    (statement_block
      (field_declaration
        (map
          (type_block
            (union
              (union_block
                (primitive_type)
                (primitive_type)
              )
            )
          )
        )
        (identifier)
      )
    )
  )
)

========================
Array of Union
========================

record RecordWithUnion {
  array<union { null, string }> optionalStrings;
}

---

(program
  (record_declaration
    (identifier)
    (statement_block
      (field_declaration
        (array
          (type_block
            (union
              (union_block
                (primitive_type)
                (primitive_type)
              )
            )
          )
        )
        (identifier)
      )
    )
  )
)
