test/corpus/99_real_life.txt
========================
Real Life Example
========================

import idl "foo.avdl";

@namespace("my.amazing_namespace.v1")
protocol MyAmazingNamespace {
  enum Shapes {
    SQUARE, TRIANGLE, CIRCLE, OVAL
  }

  fixed MD5(16);

  record Employee {
    string name;
    boolean active;
    long salary;
  }
}

---

(program
  (import_declaration
    (identifier)
    (string)
  )
  (protocol_declaration
    (namespace_declaration
      (string)
    )
    (identifier)
    (protocol_block
      (enum_declaration
        (identifier)
        (enum_block
          (enumeral)
          (enumeral)
          (enumeral)
          (enumeral)
        )
      )
      (fixed_declaration
        (call_expression
          (identifier)
          (arguments
            (literal_type
              (number)
            )
          )
        )
      )
      (record_declaration (identifier)
        (record_block
          (field_declaration
            (primitive_type)
            (identifier)
          )
          (field_declaration
            (primitive_type)
            (identifier)
          )
          (field_declaration
            (primitive_type)
            (identifier)
          )
        )
      )
    )
  )
)
